<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alexandre.netflixlibraryproject.Fragment.SerieDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 1. Linearlayout principal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 2. Linearlayout -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                tools:context="com.example.alexandre.netflixlibraryproject.unused.FilmDetails">

                <!-- 3. Linearlayout englobant l'image avec ses caractéristiques -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:id="@+id/iv_serie_details_poster"
                        android:layout_width="150dp"
                        android:layout_height="220dp"
                        android:layout_gravity="left"
                        android:src="@drawable/defaut" />


                    <!-- 4. Linearlayout mettant les caractristiques verticalement à droite de l'image -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="7dp">


                        <!-- 4.1 Compagny -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_movieF_compagny"
                            android:textColor="@color/ColorSubtitles"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tv_serie_details_companys"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/notFind"/>



                        <!-- 4.2 Category -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_movieF_category"
                            android:textColor="@color/ColorSubtitles"
                            android:textSize="17sp" />


                        <TextView
                            android:id="@+id/tv_serie_details_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/notFind"/>


                        <!-- 4.3 First air date -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_serieF_firstairdate"
                            android:textColor="@color/ColorSubtitles"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tv_serie_details_firstAirDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notFind"/>
                    </LinearLayout> <!-- Fin 4 -->


                </LinearLayout> <!-- Fin 3 -->



                <TextView
                    android:id="@+id/tv_serie_details_showTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ColorTitle"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/notFind"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_serie_details_rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15sp"/>

                    <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:isIndicator="true"
                        android:numStars="1"
                        android:rating="1"
                        android:progressTint="@color/colorPrimary"
                        android:secondaryProgressTint="@color/colorPrimary" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_movieF_cast"
                    android:textColor="@color/ColorSubtitles"
                    android:textSize="17dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_serie_details_listeActors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>




                <!-- 4.4 Number of season -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/tv_serie_details_nbSeason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ColorSubtitles"
                        android:textSize="17sp"
                        android:text="/?"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_serieF_season"
                        android:textColor="@color/ColorSubtitles"
                        android:textSize="17sp" />

                </LinearLayout>


                <!-- 4.5 Number of episode -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <TextView
                        android:id="@+id/tv_serie_details_nbEpisode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/ColorSubtitles"
                        android:textSize="17sp"
                        android:text="/?"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_serieF_episode"
                        android:textColor="@color/ColorSubtitles"
                        android:textSize="17sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_serie_details_youtube"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:text="@string/btn_movieF_trailer"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tv_movieF_summary"
                    android:textColor="@color/ColorSubtitles"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_serie_details_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/notFind" />

            </LinearLayout> <!-- Fin 2 -->

                <ImageView
                    android:id="@+id/iv_serie_details_backposter"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="-5dp"
                    android:layout_height="210dp"
                    android:src="@drawable/defautback" />

        </LinearLayout> <!-- Fin 1 -->
    </ScrollView>

</FrameLayout>
